--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -19,9 +19,9 @@
             }
         }
     </script>
-    <div class="container mx-auto" style="padding-top: 40px;">
+    <div class="container mx-auto px-10" style="padding-top: 80px;">
         <div class="container mx-auto">
-            <div class="flex gap-5">
+            <div class="flex gap-10">
                 <div class="w-[250px] shrink-0">
 
                     <div class="flex">
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="mt-5 bg-white rounded-md p-5">
+            <div class="mt-10 bg-white h-full rounded-md p-8">
                 <h3 class="text-xl font-bold">나의 인벤토리</h3>
                 <div class="flex gap-5 overflow-auto">
                     <div class="grid grid-col-1 xl:grid-cols-4 p-5 gap-[30px]">
