--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -49,7 +49,7 @@
 
 
             </div>
-            <div class="card bg-gray-200 mt-3 h-75 flex place-content-around">
+            <div class="card bg-white mt-3 h-75 flex place-content-around">
 
                 <div class="flex justify-around">
                     <div class="w-30 content-center items-center">
@@ -98,7 +98,7 @@
     <div>
         <div class="flex flex-wrap justify-center h-3/4 mt-14">
             <div class="w-1/8 h-full"></div>
-            <div class="card bg-gray-200 w-5/6 h-full">
+            <div class="card bg-white w-5/6 h-full">
                 <div class="flex flex-col h-full">
                     <h1 class="text-[20px] font-black mt-5 mx-8">Challenge Introduction</h1>
                     <p class="text-[15px] font-double mt-5 mb-5 mx-14" th:text="${challenge.challengeContents}"></p>
@@ -110,7 +110,7 @@
 
         <div class="flex flex-wrap justify-center mt-14">
             <div class="w-1/8 h-full"></div>
-            <div class="card bg-gray-200 w-5/6 h-full">
+            <div class="card bg-white w-5/6 h-full">
                 <div class="flex flex-col h-1/2">
                     <th:block th:unless="${hasPost}">
                         <h2 class="text-[20px] font-black mt-5 mx-8">아직 아무도 인증하지 않았어요!</h2>
@@ -194,7 +194,7 @@
                 <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${challenge.id}">
                     <style>
                         .custom-input {
-                            background-color: #E5E7EB;
+                            background-color: #ffffff;
                             border: 1px solid #03fa6e;
                             transition: border-color 0.3s;
                         }
@@ -208,7 +208,7 @@
 
                     <style>
                         .custom-button {
-                            background-color: #E5E7EB;
+                            background-color: #ffffff;
                             border-color: #03fa6e;
                             transition: background-color 0.3s, border-color 0.3s;
                         }
