--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -49,7 +49,7 @@
 
                 <div class="w-full p-10 lg:w-[65rem]">
                     <span class="badge badge-md">인증 이미지</span>
-                    <img class="mt-10" th:src="${post.largePhoto}" alt="post_image"/>
+                    <img class="mt-10" th:src="${post.postPhoto.getLargePhoto()}" alt="post_image"/>
                 </div>
 
 <!--                <div class="w-full p-10 lg:w-[65rem]">-->
