--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -25,19 +25,19 @@
 
     <div class="flex w-full mt-10 mx-100 justify-center">
         <div class="mx-20">
-            <img th:src="${challenge.largePhoto}" alt="challenge_image"/>
+            <img th:src="${challenge.challengePhoto.getLargePhoto()}" alt="challenge_image"/>
         </div>
         <div class="w-1/3">
             <div class="flex justify-between">
                 <p class="text-[30px] bolder-double font-bold mx-3" th:text="${challenge.challengeName}"></p>
 
-                <th:block th:unless="${isJoin}">
+                <th:block th:unless="${byChallengeAndMember.isPresent()}">
                     <button th:onclick="'wantJoin(\'' + ${challenge.id} + '\')'"
                             class="btn btn-accent">참여하기
                     </button>
                 </th:block>
 
-                <th:block th:if="${isJoin}">
+                <th:block th:if="${byChallengeAndMember.isPresent()}">
                     <a th:href="@{|/usr/challenge/write_form/${challenge.id}|}"
                        class="btn btn-accent mx-2">
                         <button>인증하기</button>
@@ -59,23 +59,23 @@
                            th:text="${challenge.startDate} + ' ~ ' + ${challenge.endDate}"></p>
                         <div class="badge badge-lg badge-outline gap-3 mt-5">
                             <i class="fa-solid fa-person fa-lg" style="color: #000000;"></i>
-                            <p class="text-black"> -no- 명</p>
+                            <p class="text-black" th:text="${@challengeMemberService.getChallengeUserCount(challenge)} + ' 명'"></p>
                         </div>
                         <p class="text-[20px] bolder-double mt-5"
                            th:text="'주 ' + ${challenge.challengeFrequency} + '회'"></p>
                         <p class="text-[20px] bolder-double mt-5" th:text="${challenge.challengeCreator}"></p>
                         <div class="mt-6">
                             <p class="badge badge-warning text-[20px] bolder-double badge-lg"
-                               th:text="${challenge.challengeLanguage}"></p>
+                               th:text="${challenge.challengeTag.challengeLanguage}"></p>
                             <p class="badge badge-primary text-[20px] bolder-double badge-lg"
-                               th:text="${challenge.challengeSubject}"></p>
+                               th:text="${challenge.challengeTag.challengeSubject}"></p>
                             <p class="badge badge-notice text-[20px] bolder-double badge-lg"
-                               th:text="${challenge.challengePostType}"></p>
+                               th:text="${challenge.challengeTag.challengePostType}"></p>
                         </div>
-                        <th:block th:unless="${hasPost}">
+                        <th:block th:if="${#lists.isEmpty(challengePostList)}">
                             <p class="text-[20px] bolder-double mt-5"> 0 개</p>
                         </th:block>
-                        <th:block th:if="${hasPost}">
+                        <th:block th:unless="${#lists.isEmpty(challengePostList)}">
                             <p class="text-[20px] bolder-double mt-5" th:text="${#lists.size(challengePostList)} + '개'"></p>
                         </th:block>
 
@@ -103,17 +103,17 @@
             <div class="w-1/8 h-full"></div>
             <div class="card bg-gray-200 w-3/4 h-full ml-20">
                 <div class="flex flex-col h-1/2">
-                    <th:block th:unless="${hasPost}">
+                    <th:block th:if="${#lists.isEmpty(challengePostList)}">
                         <h2 class="text-[20px] font-black mt-5 mx-8">아직 아무도 인증하지 않았어요!</h2>
                     </th:block>
 
                     <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 gap-[50px] bg-white-500 my-10">
-                        <th:block th:if="${hasPost}">
+                        <th:block th:unless="${#lists.isEmpty(challengePostList)}">
                             <!-- 인증글 내용 -->
                             <div th:each="post : ${challengePostList}">
                                 <div class="card w-[200px] shadow-xl mx-8">
                                     <figure>
-                                        <img th:src="${post.smallPhoto}" alt="post_image"
+                                        <img th:src="${post.postPhoto.getSmallPhoto()}" alt="post_image"
                                              class="rounded-xl w-[90%] mt-3"/>
                                     </figure>
                                     <div class="card-body">
