--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -23,16 +23,9 @@
 
 
     <div class="flex w-full mt-10 mx-100 justify-center">
-
         <div class="mx-2 mt-9">
-            <img th:src="${challenge.largePhoto}" alt="challenge_image" class="w-[85%] h-auto"/>
-
-            <div class="mx-20">
-                <img th:src="${challenge.challengePhoto.getLargePhoto()}" alt="challenge_image"/>
-
-            </div>
-
-
+            <img th:src="${challenge.challengePhoto.getLargePhoto()}" alt="challenge_image" class="w-[85%] h-auto"/>
+        </div>
             <div class="w-1/3">
                 <div class="flex justify-between">
                     <h3 class="text-2xl font-bold my-9" th:text="${challenge.challengeName}"></h3>
@@ -50,7 +43,6 @@
                             <button>인증하기</button>
                         </a>
                     </th:block>
-
 
 
                 </div>
@@ -79,16 +71,17 @@
 
                             <div class="mt-3">
                                 <p class="badge badge-warning text-[17px] bolder-double badge-lg"
-                                   th:text="${challenge.challengeLanguage}"></p>
+                                   th:text="${challenge.challengeTag.challengeLanguage}"></p>
                                 <p class="badge badge-primary text-[17px] bolder-double badge-lg"
-                                   th:text="${challenge.challengeSubject}"></p>
+                                   th:text="${challenge.challengeTag.challengeSubject}"></p>
                                 <p class="badge badge-notice text-[17px] bolder-double badge-lg"
-                                   th:text="${challenge.challengePostType}"></p>
+                                   th:text="${challenge.challengeTag.challengePostType}"></p>
                             </div>
-                            <th:block th:unless="${hasPost}">
+
+                            <th:block th:if="${#lists.isEmpty(challengePostList)}">
                                 <p class="text-[17px] bolder-double mt-3"> 0 개</p>
                             </th:block>
-                            <th:block th:if="${hasPost}">
+                            <th:block th:unless="${#lists.isEmpty(challengePostList)}">
                                 <p class="text-[17px] bolder-double mt-3 mb-5" th:text="${#lists.size(challengePostList)} + '개'"></p>
                             </th:block>
 
@@ -112,6 +105,7 @@
                 <div class="w-1/8 h-full"></div>
             </div>
 
+            <br/>
 
             <div class="flex flex-wrap justify-center mt-14">
                 <div class="w-1/8 h-full"></div>
@@ -127,13 +121,8 @@
                                 <div th:each="post : ${challengePostList}">
                                     <div class="card w-[200px] shadow-xl mx-8">
                                         <figure>
-
-                                            <img th:src="${post.smallPhoto}" alt="post_image"
-                                                 class="rounded-xl w-[80%] mt-8"/>
-
                                             <img th:src="${post.postPhoto.getSmallPhoto()}" alt="post_image"
-                                                 class="rounded-xl w-[90%] mt-3"/>
-
+                                                 class="rounded-xl w-[80%] mt-8"/>
                                         </figure>
                                         <div class="card-body">
 
@@ -169,74 +158,74 @@
                         </div>
                     </div>
 
-                    <div class="divider"></div>
-                    <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">
-                        <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">
-                            <div class="chat-image avatar">
-                                <div class="w-10 rounded-full">
-                                    <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-                                </div>
-                            </div>
+<!--                    <div class="divider"></div>-->
+<!--                    <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">-->
+<!--                        <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">-->
+<!--                            <div class="chat-image avatar">-->
+<!--                                <div class="w-10 rounded-full">-->
+<!--                                    <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                            <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
-                                Obi-Wan Kenobi
-                                <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}">12:45</time>
-                            </div>
-                            <div class="chat-bubble" th:text="${comment.commentContent}">You were the Chosen One!</div>
+<!--                            <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">-->
+<!--                                Obi-Wan Kenobi-->
+<!--                                <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}">12:45</time>-->
+<!--                            </div>-->
+<!--                            <div class="chat-bubble" th:text="${comment.commentContent}">You were the Chosen One!</div>-->
 
-                        </div>
-                        <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">
-                            <div class="chat-image avatar">
-                                <div class="w-10 rounded-full">
-                                    <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-                                </div>
-                            </div>
+<!--                        </div>-->
+<!--                        <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">-->
+<!--                            <div class="chat-image avatar">-->
+<!--                                <div class="w-10 rounded-full">-->
+<!--                                    <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                            <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
-                                Anakin
-                                <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>
-                            </div>
-                            <div class="chat-bubble" th:text="${comment.commentContent}">I hate you!</div>
-                        </div>
-                    </div>
+<!--                            <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">-->
+<!--                                Anakin-->
+<!--                                <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>-->
+<!--                            </div>-->
+<!--                            <div class="chat-bubble" th:text="${comment.commentContent}">I hate you!</div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <!--데이지ui 사용한 댓글창과 버튼 수정-->
-                    <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${challenge.id}">
-                        <style>
-                            .custom-input {
-                                background-color: #ffffff;
-                                border: 1px solid #03fa6e;
-                                transition: border-color 0.3s;
-                            }
-                            .custom-input:focus {
-                                outline: none;
-                                border-width: 2px;
-                                border-color: #03fa6e;
-                            }
-                        </style>
-                        <input type="text" name="contents" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-success w-full max-w-xs custom-input" />
+<!--                    &lt;!&ndash;데이지ui 사용한 댓글창과 버튼 수정&ndash;&gt;-->
+<!--                    <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${challenge.id}">-->
+<!--                        <style>-->
+<!--                            .custom-input {-->
+<!--                                background-color: #ffffff;-->
+<!--                                border: 1px solid #03fa6e;-->
+<!--                                transition: border-color 0.3s;-->
+<!--                            }-->
+<!--                            .custom-input:focus {-->
+<!--                                outline: none;-->
+<!--                                border-width: 2px;-->
+<!--                                border-color: #03fa6e;-->
+<!--                            }-->
+<!--                        </style>-->
+<!--                        <input type="text" name="contents" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-success w-full max-w-xs custom-input" />-->
 
-                        <style>
-                            .custom-button {
-                                background-color: #ffffff;
-                                border-color: #03fa6e;
-                                transition: background-color 0.3s, border-color 0.3s;
-                            }
-                            .custom-button:hover,
-                            .custom-button:focus,
-                            .custom-button:active {
-                                background-color: #03fa6e;
-                                border-color: #03fa6e;
-                                outline: none;
-                            }
-                        </style>
-                        <button type="submit" class="mx-1 mt-3 custom-button btn btn-outline disabled">
-                            <i class="fas fa-paper-plane" style="color: #000000"></i>
-                        </button>
-                    </form>
+<!--                        <style>-->
+<!--                            .custom-button {-->
+<!--                                background-color: #ffffff;-->
+<!--                                border-color: #03fa6e;-->
+<!--                                transition: background-color 0.3s, border-color 0.3s;-->
+<!--                            }-->
+<!--                            .custom-button:hover,-->
+<!--                            .custom-button:focus,-->
+<!--                            .custom-button:active {-->
+<!--                                background-color: #03fa6e;-->
+<!--                                border-color: #03fa6e;-->
+<!--                                outline: none;-->
+<!--                            }-->
+<!--                        </style>-->
+<!--                        <button type="submit" class="mx-1 mt-3 custom-button btn btn-outline disabled">-->
+<!--                            <i class="fas fa-paper-plane" style="color: #000000"></i>-->
+<!--                        </button>-->
+<!--                    </form>-->
 
-                </div>
-                <div class="w-1/8 h-full"></div>
+<!--                </div>-->
+<!--                <div class="w-1/8 h-full"></div>-->
             </div>
         </div>
     </div>
